crates/solidity/testing/snapshots/bindings_output/using/deconstruction/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Identifier.
    ╭─[input.sol:10:11]
    │
 10 │     using {Lib.increment} for Lib.Counter;
    │           ───────────────┬───────────────  
    │                          ╰───────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ library Lib {
    │         ─┬─  
    │          ╰─── def: 1
  2 │     struct Counter {
    │            ───┬───  
    │               ╰───── def: 2
  3 │         uint value;
    │              ──┬──  
    │                ╰──── def: 3
    │ 
  6 │     function increment(Counter memory _counter) public {}
    │              ────┬──── ───┬───        ────┬───  
    │                  ╰────────────────────────────── def: 4
    │                           │               │     
    │                           ╰───────────────────── ref: 2
    │                                           │     
    │                                           ╰───── def: 5
    │ 
  9 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 6
    │ 
 12 │     function test(Lib.Counter memory c) public {
    │              ──┬─ ─┬─ ───┬───        ┬  
    │                ╰──────────────────────── def: 7
    │                    │     │           │  
    │                    ╰──────────────────── ref: 1
    │                          │           │  
    │                          ╰────────────── ref: 2
    │                                      │  
    │                                      ╰── def: 8
 13 │         c.increment();
    │         ┬ ────┬────  
    │         ╰──────────── ref: 8
    │               │      
    │               ╰────── unresolved
────╯
